<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="textview2">TextView2</string>
    <string name="textview">TextView</string>
    <string name="c">C</string>
    <string name="negaticve">+/-</string>
    <string name="u221a">√</string>
    <string name="del">DEL</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="divide">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="multi">x</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="minus">-</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="result">=</string>
    <string name="sum">+</string>
    <string name="setting">Setting</string>
    <string name="author">author</string>
    <string name="title_activity_about">AboutActivity</string>
</resources>
