<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.shuwax.kalkulatorprosty.MainActivity"
    android:weightSum="1">


    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar"
        app:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />

    <TextView
        android:text="@string/textview2"
        android:gravity="right|bottom"
        android:textSize="25sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="35px"
        android:id="@+id/textView2"
        android:background="#d5d6d6"
        android:layout_weight="0.36"
        android:scrollbars="vertical"/>

    <TextView
        android:text="@string/textview"
        android:gravity="right|bottom"
        android:textSize="40sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="30px"
        android:id="@+id/textView"
        android:layout_weight="0.68"
        android:scrollbars="vertical"
        />


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorButtonNormal"
        >


        <Button
            android:text="@string/c"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/button1"
            android:onClick="onClickClear"
            android:background="?attr/colorButtonNormal"
            android:textStyle="normal|bold"
            android:textSize="24sp"
            tools:textStyle="normal" />


        <Button
            android:text="@string/negaticve"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/button2"
            android:onClick="OnClickActionNegative"
            android:background="?attr/colorButtonNormal"
            android:textStyle="normal|bold"
            android:textSize="24sp"
            tools:textStyle="normal" />



        <Button
            android:text="@string/u221a"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/button3"
            android:onClick="OnClickActionSqrt"
            android:background="?attr/colorButtonNormal"
            android:textStyle="normal|bold"
            android:textSize="24sp"
            tools:textStyle="normal" />


        <Button
            android:text="@string/del"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/button4"
            android:background="?attr/colorButtonNormal"
            android:textStyle="normal|bold"
            android:textSize="24sp"
            tools:textStyle="normal"
            android:onClick="OnClickDel"/>

    </LinearLayout>



    <LinearLayout
        android:background="?attr/colorButtonNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:text="@string/_7"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/button5"
            android:onClick="onClickNumericBtn"
            android:background="?attr/colorButtonNormal"
            android:textSize="24sp"
            android:textStyle="normal|bold" />


        <Button
            android:text="@string/_8"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/button6"
            android:onClick="onClickNumericBtn"
            android:background="?attr/colorButtonNormal"
            android:textStyle="normal|bold"
            android:textSize="24sp" />


        <Button
            android:text="@string/_9"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/button7"
            android:onClick="onClickNumericBtn"
            android:background="?attr/colorButtonNormal"
            android:textStyle="normal|bold"
            android:textSize="24sp" />


        <Button
            android:text="@string/divide"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/button8"
            android:onClick="OnClickAction"
            android:background="?attr/colorButtonNormal"
            android:textStyle="normal|bold"
            android:textSize="24sp"
            tools:textStyle="normal" />

    </LinearLayout>


    <LinearLayout
        android:background="?attr/colorButtonNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:text="@string/_4"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/button9"
            android:onClick="onClickNumericBtn"
            android:background="?attr/colorButtonNormal"
            android:textStyle="normal|bold"
            android:textSize="24sp" />


        <Button
            android:text="@string/_5"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/button10"
            android:onClick="onClickNumericBtn"
            android:background="?attr/colorButtonNormal"
            android:textStyle="normal|bold"
            android:textSize="24sp" />


        <Button
            android:text="@string/_6"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/button11"
            android:onClick="onClickNumericBtn"
            android:background="?attr/colorButtonNormal"
            android:textStyle="normal|bold"
            android:textSize="24sp" />


        <Button
            android:text="@string/multi"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/button12"
            android:onClick="OnClickAction"
            android:background="?attr/colorButtonNormal"
            android:textStyle="normal|bold"
            android:textSize="24sp"
            tools:textStyle="normal" />

    </LinearLayout>


    <LinearLayout
        android:background="?attr/colorButtonNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:text="@string/_1"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/button13"
            android:onClick="onClickNumericBtn"
            android:background="?attr/colorButtonNormal"
            android:textStyle="normal|bold"
            android:textSize="24sp" />


        <Button
            android:text="@string/_2"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/button14"
            android:onClick="onClickNumericBtn"
            android:background="?attr/colorButtonNormal"
            android:textStyle="normal|bold"
            android:textSize="24sp" />


        <Button
            android:text="@string/_3"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/button15"
            android:onClick="onClickNumericBtn"
            android:background="?attr/colorButtonNormal"
            android:textStyle="normal|bold"
            android:textSize="24sp" />


        <Button
            android:text="@string/minus"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/button16"
            android:onClick="OnClickAction"
            android:background="?attr/colorButtonNormal"
            android:textStyle="normal|bold"
            android:textSize="24sp"
            tools:textStyle="normal" />

    </LinearLayout>



    <LinearLayout
        android:background="?attr/colorButtonNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:text="@string/_0"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/button17"
            android:onClick="onClickNumericBtn"
            android:background="?attr/colorButtonNormal"
            android:textStyle="normal|bold"
            android:textSize="24sp" />


        <Button
            android:text="@string/dot"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/button18"
            android:background="?attr/colorButtonNormal"
            android:textStyle="normal|bold"
            android:textSize="24sp"
            android:onClick="OnClickActionDot"/>


        <Button
            android:text="@string/result"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/button19"
            android:onClick="onClickResult"
            android:background="?attr/colorButtonNormal"
            android:textStyle="normal|bold"
            android:textSize="24sp" />


        <Button
            android:text="@string/sum"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/button20"
            android:onClick="OnClickAction"
            android:background="?attr/colorButtonNormal"
            android:textStyle="normal|bold"
            android:textSize="24sp"
            tools:textStyle="normal" />

    </LinearLayout>


</LinearLayout>
